# MonkeyTyper

./: CMakeLists.txt  README.md  highscores.txt  main.cpp  monkeyutils.cpp  monkeyutils.h  previous.txt  words.txt
